[package]
name = "haversine-rs"
version = "0.3.0"
edition = "2021"
authors = ["Efrén Fuentes (efrenfuentes@gmail.com)"]
description = "Provides some helpers functions to calculate the distance between two points on Earth using the Haversine formula."
repository = "https://github.com/efrenfuentes/haversine-rs"
keywords = ["haversine", "geolocation", "distance", "earth", "bearing"]
documentation = "https://docs.rs/haversine-rs/0.3.0/haversine_rs/"
categories = ["mathematics", "science::geo"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
